🐞 fix(presentation):z-index fix on title

--- a/CSS/style-presentation.css
+++ b/CSS/style-presentation.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
 }
-.conteneur-star-titre{
+.star-titre{
     z-index: 5;
 }
 /* Animation properties */
